--- a/Projeto Starbucks JS/style.css
+++ b/Projeto Starbucks JS/style.css
@@ -3,14 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    z-index: 1;
+   
 }
 
 
-html, body {
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
+
 
 /*TODA SECTION*/
 section {
@@ -22,6 +19,8 @@ section {
     justify-content: space-between;
     align-items: center;
     background-color:#fff ;
+   
+    
 }
 
 /*CABEÇALHO*/
@@ -43,12 +42,14 @@ header .logo {
 }
 
 /*NAV MENU*/
+
 .nav a:hover{ 
     font-weight: bold;
     color: #017143;
 
 }
 
+/*CABEÇALHO*/
 header ul {
     position: relative;
     display: flex;
@@ -121,11 +122,15 @@ header ul li a {
     justify-content: flex-end;
     padding-right: 50px;
     margin-top: 50px;
+    
 }
+
 
 
 .content .imgBox img {
     max-width: 340px;
+   
+    
 }
 
 /*THUMBS RODAPÉ*/
@@ -179,6 +184,7 @@ header ul li a {
 
 /*CIRCULO DOS COPOS*/
 .circle {
+    
     position: absolute;
     top: 0;
     left: 0;
@@ -186,4 +192,110 @@ header ul li a {
     height: 100%;
     background-color: #017143;
     clip-path: circle(600px at right 800px );
+    
+}
+
+@media (max-width:991px){
+
+    /*CABEÇALHO*/
+    header {
+        padding: 20px;
+    }
+
+    header .logo{
+        position: relative;
+        max-width: 60px;
+    }
+    
+    header ul {
+        display: none;
+    }
+
+    /*efeito hamburguer*/
+    /*MENU JS*/
+    .toggle {
+        position: relative;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        background: url(assets/menu.png);
+        background-size: 30px ;
+        background-position: center;
+        background-repeat: no-repeat;
+        filter: invert(1);
+        z-index: 11;
+    }
+
+    .toggle.active{
+        background: url(assets/close.png);
+        background-size: 25px ;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    /*MENU NAV*/
+    header ul.navigation.active{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height:100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color:#fff;
+        z-index: 10;
+       
+    }
+    /*Fim do efeito hamburguer*/
+
+    section{
+        flex-direction: column;
+        padding: 20px 20px 120px;
+    }
+
+    /*PARTE DO TEXTO*/
+    .content{
+        margin-top: 100px;
+    }
+
+    .content .textBox h2 {
+        font-size: 2.5em;
+        margin-bottom: 15px;
+    }
+
+    .content .textBox {
+        max-width: 100%;
+    }
+
+    /*IMAGEM DO COPO DA DIREITA COM COR DE FUNDO*/
+    .content .imgBox{
+        max-width: 100%;
+        justify-content: center;
+    }
+
+    .content .imgBox img {
+        max-width: 300px;
+    }
+
+    /*THUMBS RODAPÉ*/
+    .thumb li img {
+        max-width: 40px;
+    }
+
+    /*CIRCULO*/
+    .circle{
+        clip-path: circle(400px at center bottom);
+    }
+    /*SOCIAL MIDIA*/
+    .sci {
+        background-color:#017143;
+        right: 0;
+        width: 50px;
+        border-top-left-radius: 5px;
+       
+    }
+
+
 }
